--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       </li>
 
       <li class="unit unit-xs-1 s-1 m-1-2 l-1-2 push-1-2 island-1-4 unit-content-distribute">
-        <div class="img-flex push-1-2" class="card island-1-2 content-fill unit-content-distribute">
-          <img src="images/megatherium.jpg" alt="">
+        <div class="card island-1-2 content-fill unit-content-distribute">
+          <img class="img-flex push-1-2" src="images/megatherium.jpg" alt="">
           <h2 class="giga push-1-2">Megatherium</h2>
           <p class="content-fill push-1-2">Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
           <a href="https://en.wikipedia.org/wiki/Megatherium">Learn more about Megatherium</a>
