--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet">
 </head>
 <body>
 
