--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>lists-n-grids</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet">
 </head>
 <body>
@@ -20,7 +20,7 @@
           <img class="img-flex push-1-2" src="images/arsinoitherium.jpg" alt="">
           <h2 class="giga push-1-2">Arsinoitherium</h2>
           <p class="content-fill push-1-2">Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
-          <a href="https://en.wikipedia.org/wiki/Arsinoitherium">Learn more about Arsinoitherium</a>
+          <a class="mega" href="https://en.wikipedia.org/wiki/Arsinoitherium">Learn more about Arsinoitherium</a>
         </div>
       </li>
 
@@ -29,7 +29,7 @@
           <img class="img-flex push-1-2" src="images/elasmotherium.jpg" alt="">
           <h2 class="giga push-1-2">Elasmotherium</h2>
           <p class="content-fill push-1-2">Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
-          <a href="https://en.wikipedia.org/wiki/Elasmotherium">Learn more about Elasmotherium</a>
+          <a class="mega" href="https://en.wikipedia.org/wiki/Elasmotherium">Learn more about Elasmotherium</a>
         </div>
       </li>
 
@@ -38,7 +38,7 @@
           <img class="img-flex push-1-2" src="images/glyptodon.jpg" alt="">
           <h2 class="giga push-1-2">Glyptodon</h2>
           <p class="content-fill push-1-2">Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
-          <a href="https://en.wikipedia.org/wiki/Glyptodon">Learn more about Glyptodon</a>
+          <a class="mega" href="https://en.wikipedia.org/wiki/Glyptodon">Learn more about Glyptodon</a>
         </div>
       </li>
 
@@ -47,7 +47,7 @@
           <img class="img-flex push-1-2" src="images/megatherium.jpg" alt="">
           <h2 class="giga push-1-2">Megatherium</h2>
           <p class="content-fill push-1-2">Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
-          <a href="https://en.wikipedia.org/wiki/Megatherium">Learn more about Megatherium</a>
+          <a class="mega" href="https://en.wikipedia.org/wiki/Megatherium">Learn more about Megatherium</a>
         </div>
       </li>
 
